# wingufile

./: .gitignore  Makefile.am  README.markdown  configure.ac  setupmac.sh  setupwin.py  updateversion.sh  wingufile-web.in
app/: Makefile.am  monitor-tool.c  winguf-cli  wingufile.c  wingufserv-tool.c
common/: Makefile.am  block-backend-ceph.c  block-backend-fs.c  block-backend.c  block-mgr.c  block-mgr.h  block-tx-utils.c  branch-mgr.c  branch-mgr.h  commit-mgr.c  commit-mgr.h  diff-simple.c  diff-simple.h  fs-mgr.c  fs-mgr.h  gc-core.c  info-mgr.c  info-mgr.h  log.c  log.h  merge-new.c  merge-new.h  mq-mgr.c  mq-mgr.h  obj-backend-fs.c  obj-backend-riak.c  obj-store.c  obj-store.h  riak-client.h  riak-http-client.c  riak-http-test.c  rpc-deprecated.c  rpc-service.c  unpack-trees.c  unpack-trees.h  vc-common.c  winguf-db.c  winguf-db.h  winguf-tree-walk.c  winguf-tree-walk.h  (+6 more)
common/cdc/: Makefile.am  cdc.c  cdc.h
common/index/: Makefile.am  cache-tree.c  index.c  index.h
common/processors/: blocktx-common-impl-v2.h  blocktx-common-impl.h  putblock-proc.c  putblock-proc.h  putblock-v2-proc.c  putblock-v2-proc.h
controller/: Makefile.am  wingufile-controller.c  wingufile-controller.h
daemon/: Makefile.am  block-tx-client.c  clone-mgr.c  clone-mgr.h  diff.c  diff.h  gc.c  merge-recursive.c  merge-recursive.h  merge.c  repo-mgr.c  repo-mgr.h  share-info.c  share-info.h  share-mgr.c  share-mgr.h  status.c  sync-mgr.c  sync-mgr.h  transfer-mgr.c  transfer-mgr.h  vc-utils.c  vc-utils.h  winguf-daemon.c  winguf-test.c  winguf-tool.c  wingufile-session.c  wingufile-session.h  wt-monitor-common.h  wt-monitor-linux.c  wt-monitor-macos.c  wt-monitor-win32.c  wt-monitor.h
daemon/processors/: check-tx-proc.c  check-tx-proc.h  check-tx-slave-proc.c  check-tx-slave-proc.h  check-tx-v2-proc.c  check-tx-v2-proc.h  check-tx-v3-proc.c  check-tx-v3-proc.h  checkbl-proc.c  checkbl-proc.h  getblock-proc.c  getblock-proc.h  getblock-v2-proc.c  getblock-v2-proc.h  getcommit-proc.c  getcommit-proc.h  getcommit-v2-proc.c  getcommit-v2-proc.h  getcs-proc.c  getcs-proc.h  getcs-v2-proc.c  getcs-v2-proc.h  getfs-proc.c  getfs-proc.h  getrepoemailtoken-proc.c  getrepoemailtoken-proc.h  notifysync-proc.c  notifysync-proc.h  notifysync-slave-proc.c  notifysync-slave-proc.h  putcommit-proc.c  putcommit-proc.h  putfs-proc.c  putfs-proc.h  sendblock-proc.c  sendblock-proc.h  sendblock-v2-proc.c  sendblock-v2-proc.h  sendbranch-proc.c  sendbranch-proc.h  (+12 more)
daemon/repokey/: wingufile-gnome-keyring.c
data/: Makefile.am  wingufile.desktop
data/icons/: Makefile.am
data/icons/128x128/: Makefile.am
data/icons/16x16/: Makefile.am
data/icons/22x22/: Makefile.am
data/icons/24x24/: Makefile.am
data/icons/32x32/: Makefile.am
data/icons/48x48/: Makefile.am
data/icons/scalable/: Makefile.am
debian/: README.Debian  changelog  control  copyright  rules
doc/: Makefile.am  ccnet.1  cli-readme.txt  winguf-cli.1  winguf-daemon.1  wingufile-applet.1  wingufile-web.1
gui/common/: applet-common.c  applet-common.h  applet-po.h  applet-rpc-service.c  applet-rpc-service.h  ccnet-init.c  ccnet-init.h  opendir-proc.c  rpc-wrapper.c  rpc-wrapper.h  translate-commit-desc.c  wingufile-applet.h
gui/gtk/: Makefile.am  init-ccnet.c  init-wingufile-window.ui  trayicon.c  trayicon.h  wingufile-applet.c
gui/win/: init-ccnet.c  resource.en.h  resource.h  trayicon.c  trayicon.en.rc  trayicon.h  trayicon.rc  wingufile-applet.c
httpserver/: Makefile.am  access-file.c  httpserver.c  httpserver.h  pack-dir.c  pack-dir.h  repo-mgr.c  repo-mgr.h  upload-file.c  wingufile-session.c  wingufile-session.h
httpserver/htmls/: index.html  upload.html
include/: Makefile.am  wingufile-error.h  wingufile-rpc.h  wingufile.h
lib/: Makefile.am  branch.vala  commit.vala  crypt.vala  dir.vala  dirent.vala  file.vala  libwingufile.pc.in  repo.vala  task.vala  utils.c  utils.h  webaccess.vala  wingufile-rpc-wrapper.c
msi/: Includes.wxi  MyInstallDirDlg.wxs  en_US.wxl  manual.en.txt  manual.txt  wingufile.wxs  zh_CN.wxl
msi/custom/: custom.c  custom.def
po/: POTFILES.in  POTFILES.skip  de_DE.po  fr.po  i18n.markdown  sk_SK.po  zh_CN.po
python/: Makefile.am
python/wingufile/: Makefile.am  __init__.py  rpcclient.py
python/winguserv/: Makefile.am  __init__.py  api.py  service.py
scripts/: reset-admin.sh  server-release.md  setup-wingufile-mysql.py  setup-wingufile-mysql.sh  setup-wingufile.sh  winguf-cli-wrapper.sh  wingufile.sh  winguhub.conf  winguhub.sh
scripts/upgrade/: db_update_1.3_1.4.py  minor-upgrade.sh  upgrade_1.2_1.3.sh  upgrade_1.3_1.4.sh  upgrade_1.4_1.5.sh  upgrade_1.5_1.6.sh  upgrade_1.6_1.7.sh  upgrade_1.7_1.8.sh
server/: Makefile.am  block-tx-server.c  chunkserv-mgr.c  chunkserv-mgr.h  listen-mgr.c  listen-mgr.h  monitor-rpc-wrappers.c  monitor-rpc-wrappers.h  passwd-mgr.c  passwd-mgr.h  permission-mgr.c  permission-mgr.h  quota-mgr.c  quota-mgr.h  repo-mgr.c  repo-mgr.h  repo-op.c  repo-perm.c  share-mgr.c  share-mgr.h  size-sched.c  size-sched.h  token-mgr.c  token-mgr.h  virtual-repo.c  web-accesstoken-mgr.c  web-accesstoken-mgr.h  winguf-server.c  wingufile-session.c  wingufile-session.h
server/gc/: Makefile.am  repo-mgr.c  repo-mgr.h  verify.c  wingufile-session.c  wingufile-session.h  wingufserv-gc.c
server/processors/: check-quota-common.h  check-tx-slave-proc.c  check-tx-slave-proc.h  check-tx-slave-v2-proc.c  check-tx-slave-v2-proc.h  check-tx-slave-v3-proc.c  check-tx-slave-v3-proc.h  checkbl-proc.c  checkbl-proc.h  heartbeat-proc.c  heartbeat-proc.h  put-sharedb-proc.c  put-sharedb-proc.h  putbranch-proc.c  putbranch-proc.h  putcommit-proc.c  putcommit-proc.h  putcommit-v2-proc.c  putcommit-v2-proc.h  putcs-proc.c  putcs-proc.h  putcs-v2-proc.c  putcs-v2-proc.h  (+19 more)
tests/: Makefile.am  common-conf.sh.in  common.py  test-cdc.c  test-crypt.c  test-rpc.py  test-share.py  test-transfer.py  test-wingufile-fmt.c
tools/: Makefile.am  winguf-server-init.c  wingufile-admin
web/: README  deprecated.py  main.py  msg.py  run-wingufileweb.sh  setenv-wingufile.sh  settings.py  setup_mac.py
(+46 files in other folders)
